<resources>
    <string name="app_name">Shetab</string>
    <string name="profile">Profile</string>
    <string name="faq">Faq</string>
    <string name="attendance">Attendance</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="shetablogo">SheTabLogo</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="client_id">606199356156-mmvmlert8ktfr5pohqdpvk98an32afi9.apps.googleusercontent.com</string>
    <string name="client_id_web">975642582929-39bfuuv4bimep8l2cslhgori7c9s1005.apps.googleusercontent.com</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="password">Password</string>
    <string name="default_password">aA34567!</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_dashboard">DesboardActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shetab">Shetab</string>
    <string name="shetabEmail">info@shetab.tech</string>
    <string name="account">Account</string>
    <string name="apply_visa">Apply Visa</string>
    <string name="appointment">Appointment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="register">Register</string>
    <string name="our_s_title1">Labor Placement</string>
    <string name="our_s_title2">Student Placement</string>
    <string name="our_s_title3">Tourist Visa Consultancy</string>
    <string name="we_are_a_dedicated">We are a dedicated consultancy firm specializing in sending labor and students abroad. Our mission is to bridge the gap between dreams and reality by connecting individuals to global opportunities. With a strong focus on professionalism and quality, we aim to empower our clients to achieve their goals and realize their full potential.</string>
    <string name="arafat_feedback">"Thank you Shetab for your brilliant work and getting me an offer letter so quickly. Couldn't have done it without your tremendous support!"</string>
    <string name="hamim_feedback">"Shetab made my dream of getting into an undergrad program a reality, complete with a $5,000 scholarship. Many many thanks, Shetab ❤"</string>
    <string name="bayzid_feedback">"I am overjoyed and extremely thankful to SHETAB for securing my admission to my dream university for an undergrad in CS along with a $20,000 scholarship. Their exceptional support made this incredible opportunity possible."</string>
    <string name="sharoni_feedback">"I am extremely thankful to SHETAB for helping me get into my dream university for a PhD in CS, that too without a master's and without any publications! Their guidance made the impossible possible—thank you, SHETAB!"</string>
    <string name="abt_us_des4">We have hired a very selective pool of experts to help guide our clients with all their visa queries. Our diligence has allowed us to maintain an exceptionally high visa ratio.</string>
    <string name="abt_us_des3">Our experience in the European job markets sets us apart when it comes to guiding our clients in terms of securing their dream jobs in Europe. Our experts continue to help countless clients with their desired placements.</string>
    <string name="abt_us_des2">Our expertise in research is one of the key things that set us apart. We make sure to hire people with a heavy research background so that they can expertly guide our clients with research proposals and research articles.</string>
    <string name="abt_us_des1">We are amongst some of the few consultancy firms in the entire country that help clients secure full funding at some of the most prestigious universities in the world. Our clients have gotten into Ivy League universities like Harvard and Columbia.</string>
    <string name="our_s_des1">We provide reliable job placement services for skilled and unskilled labor abroad. We assist with work permits, visas, and medical clearances.</string>
    <string name="our_s_des2">We assist students in securing admissions for bachelors, masters, and PhD programs abroad. Our services include test preparation (GRE, GMAT, TOEFL, IELTS, SAT), securing scholarships, research paper writing assistance, and student visa processing.</string>
    <string name="our_s_des3">We provide expert guidance and support for obtaining tourist visas to various destinations.</string>
    <string name="company">Company</string>
    <string name="user_profile">User Profile</string>
    <string name="setting">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="our_services">Our services</string>
    <string name="abt_us_title1">Specialists in PhD</string>
    <string name="abt_us_title2">Experts in Research</string>
    <string name="abt_us_title3">Experts in European job market</string>
    <string name="abt_us_title4">Experts in Visa Assistance</string>
    <string name="sharoni">Sharoni</string>
    <string name="bayzid">Bayzid</string>
    <string name="hamim">Hamim</string>
    <string name="arafat">Arafat</string>
    <string name="sort_msg">We provide reliable job placement</string>
    <string name="ok">ok</string>
    <string name="profile_management">Profile Management</string>
    <string name="feedback">Feedback</string>
    <string name="insert_feedback">Insert feedback</string>
    <string name="support_and_communication">Support and Communication</string>
    <string name="application_management">Application Management</string>
    <string name="user_name">User name</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="top_bar">Top Bar</string>
    <string name="live_chat">Live chat</string>
    <string name="full_name">Full name</string>
    <string name="phone_no">Phone numner</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm password</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="sign_in">Sign In</string>
    <string name="manage_feedback">Manage Feedback</string>
    <string name="accept">Accept</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="dot">*</string>
    <string name="otp">OTP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="_880_xxxxxxxxxx">+880 XXXXXXXXXX</string>
    <string name="the_email_is_valid">The email is valid.</string>
    <string name="the_email_is_not_valid">The email is not valid.</string>
    <string name="_01712345678">01712345678</string>
    <string name="_017xxxxxxxx">01XXXXXXXXX</string>
    <string name="phone_no_is_valid">Phone no is valid.</string>
    <string name="phone_no_is_not_valid">Phone no is not valid.</string>
    <string name="minimum_one_small_letter">Must be at least 8 Character! Minimum 1 Capital Case, 1 Small Case, 1 Special Character and 1 digit!</string>
    <string name="strong_password">Strong password</string>
    <string name="weak_password">Weak password</string>
    <string name="password_match">Password match</string>
    <string name="password_not_match">Password not match</string>
    <string name="all_transcript"><![CDATA[All Transcript & Certificate]]></string>
    <string name="your_answer">your answer</string>
    <string name="select_a_date">Select a date</string>
    <string name="blank" />
    <string name="apply_visa_for_student">Apply Visa For Student</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="upload_your_passport">Upload your passport</string>
    <string name="upload_your_resume">Upload your resume</string>
    <string name="enter_your_email">Enter your email.</string>
    <string name="enter_last_name">Enter last name.</string>
    <string name="enter_first_name">Enter first name.</string>
    <string name="select_account_type">Select account type</string>
    <string name="account_type">Account Type</string>
    <string name="if_you_have_an_account">If you have an account!</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_strong_password">Enter strong password</string>
    <string name="enter_strong_password2">The password is</string>
    <string name="abt_us_main_des">We are a dedicated consultancy firm specializing in sending labor and students abroad. Our mission is to bridge the gap between dreams and reality by connecting individuals to global opportunities. With a strong focus on professionalism and quality, we aim to empower our clients to achieve their goals and realize their full potential.</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_home_address">Enter your home address</string>
    <string name="marital_status">Marital Status</string>
    <string name="home_address">Home Address</string>
    <string name="student">Student</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="upload_your_ssc_certificate">Upload Your SSC Certificate</string>
    <string name="upload_your_hsc_certificate">Upload Your HSC Certificate</string>
    <string name="upload_your_resume2">Upload Your Resume</string>
    <string name="upload_your_passport2">Upload Your Passport</string>
    <string name="upload_your_photo2">Upload Your Photo</string>
    <string name="visa_status">Visa Status</string>
    <string name="visa_progress">Visa Progress</string>
    <string name="new_password">New password</string>
    <string name="msg_1">Would love to hear all about it, maybe over coffee or a call sometime soon. Let me know when you\'re free!</string>
    <string name="msg_2">I know you\'\'ve been ignored before by a woman you sent a message on Tinder, FB, WhatsApp etc. She refused to reply. Why? I\'\'ll reveal it to you.</string>
    <string name="write_a_message">Write a message</string>
    <string name="team_member">Team Member</string>
    <string name="faq_qes_1">How do I register for the app?</string>
    <string name="faq_ans_1">    android:text="Open the app and click on the &quot;<b>Register</b>&quot; button on the login screen."</string>
    <string name="faq_ans_11">Open the app and click on the &quot;<b>Register</b>&quot; button on the login screen.</string>
    <string name="faq_ans_12">Fill in your details such as <b>name</b>, <b>email</b>, <b>password</b>, and <b>phone number</b>.</string>
    <string name="faq_ans_13">Click &quot;<b>Submit</b>&quot; and you will receive a verification email.</string>
    <string name="faq_ans_14">Verify your email to activate your account, and you’re ready to log in!</string>
</resources>