<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:id="@+id/textViewItemCompany" android:title="@string/company">

        <menu android:checkableBehavior="single">

            <item
                android:checked="false"
                android:id="@+id/nav_applyVisa"
                android:icon="@drawable/ic_airplanemode_active"
                android:title="@string/apply_visa" />

            <item
                android:checked="false"
                android:id="@+id/nav_visaStatus"
                android:icon="@drawable/ic_track"
                android:title="@string/visa_progress" />

            <item
                android:checked="false"
                android:id="@+id/nav_userProfile"
                android:visible="false"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/user_profile" />

            <item
                android:checked="false"
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />

            <item
                android:checked="false"
                android:id="@+id/nav_changePassword"
                android:visible="false"
                android:icon="@drawable/ic_password_black"
                android:title="@string/change_password" />

            <item
                android:checked="false"
                android:id="@+id/nav_appointment"
                android:icon="@drawable/ic_groups"
                android:title="@string/appointment" />

            <item
                android:checked="false"
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />

            <item
                android:checked="false"
                android:id="@+id/nav_dashboard"
                android:visible="false"
                android:icon="@drawable/ic_space_dashboard"
                android:title="@string/dashboard" />

            <item
                android:checked="false"
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />

            <item
                android:checked="false"
                android:id="@+id/nav_manage_feedback"
                android:icon="@drawable/ic_space_dashboard"
                android:title="@string/manage_feedback" />

        </menu>

    </item>


    <item android:id="@+id/textViewItemAccount" android:title="@string/account">

        <menu>

            <item
                android:checked="false"
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/login" />

            <item
                android:id="@+id/nav_register"
                android:checked="false"
                android:icon="@drawable/ic_register"
                android:visible="false"
                android:title="@string/register" />

            <item
                android:id="@+id/nav_logout"
                android:checked="false"
                android:icon="@drawable/ic_logout_black"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>