<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LiveChatPage">


        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical"
            android:background="@drawable/bg_btn_blue_shp_0"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/id_back_main_back"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_arrow_back_white"/>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/id_back_main_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center|left"
                        android:text="@string/top_bar"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:id="@+id/id_top_bar_img_other"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect"
                        android:gravity="center"
                        android:visibility="invisible"
                        android:layout_alignParentEnd="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_edit"/>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBar"
            >


            <LinearLayout
                android:id="@+id/layBody"
                android:background="@color/white"
                android:layout_above="@+id/inputBoxlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/chatView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/chatWelcomeView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="visible"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="25dp"
                            android:scaleType="fitCenter"
                            android:padding="20dp"
                            android:contentDescription="@string/shetablogo"
                            android:background="@drawable/logo_border"
                            app:srcCompat="@drawable/logo3" />

                        <TextView
                            android:id="@+id/textViewWelcome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="Welcome to Live Chat"
                            android:textColor="@color/app_orange"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvLiveChatList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:itemCount="1"
                        tools:listitem="@layout/msg_item_for_team_member"
                        />






                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/inputBoxlay"
                android:background="@color/gray1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/chatAttachFileLay"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_margin="2dp"
                    android:background="@drawable/ripple_effect"
                    >

                    <ImageView
                        android:id="@+id/chatAttachFileIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@drawable/ic_attach_orange"/>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="100dp">

                    <RelativeLayout
                        android:id="@+id/msgBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        >

                        <EditText
                            android:id="@+id/messageEditText"
                            android:layout_toStartOf="@+id/sendIconLay"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/write_a_message"
                            android:textColorHint="@color/hint_color"
                            android:background="@color/transparent"
                            android:paddingStart="20dp"
                            android:paddingEnd="0dp"
                            />

                        <LinearLayout
                            android:id="@+id/sendIconLay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/ripple_effect">

                            <ImageView
                                android:id="@+id/sendIconIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_send" />

                        </LinearLayout>


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>


</layout>